Paper Reading: update: fabric basis modify some , add image link

--- a/Paper Reading/服装设计面料知识.md
+++ b/Paper Reading/服装设计面料知识.md
@@ -2,11 +2,11 @@
 
 类比于数学几何中点、线、面、体的概念，在服装面料领域，可以将纤维作为布料中的基础单位。我们用纤维来纺成线。使用的纤维不同，纺出的线的种类也不同，如纱线、丝线、棉线等。以线为单位，可以纺织出各种面料。面料在经过设计、剪裁等一系列制作工序后，就变成了我们在日常生活中不可或缺的各种服装。
 
-![01 fiber2cloth](E:\Backup Folder\LiHaoyu\Github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\01 fiber2cloth.png)
+![01 fiber2cloth](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/01%20fiber2cloth.png?raw=true)
 
 以棉为例，我们可以从棉花中得到棉的植物纤维，将其纺成棉线，再用棉线纺织成棉的牛仔布料。最后，使用牛仔布料设计并制作出最终的牛仔服饰。
 
-<img src="E:\Backup Folder\LiHaoyu\Github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\02.png" alt="02" style="zoom:125%;" />![03](E:\Backup Folder\LiHaoyu\Github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\03.png)![04](E:\Backup Folder\LiHaoyu\Github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\04.png)<img src="E:\Backup Folder\LiHaoyu\Github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\05.png" alt="05" style="zoom:70%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/02.png?raw=true" alt="02" style="zoom:125%;" />![03](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/03.png?raw=true)![04](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/04.png?raw=true)<img src="https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/05.png?raw=true" alt="05" style="zoom:70%;" />
 
 ## 纤维的分类及特征
 
@@ -36,13 +36,13 @@
   * 禽类的羽毛纤维
   * ……
 
-![06](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\06.png)
+![06](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/06.png?raw=true)
 
 * 分泌物
   * 蚕丝
   * 足丝
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\07.png" alt="07" style="zoom:80%;" /><img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\08.png" alt="08" style="zoom:80%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/07.png?raw=true" alt="07" style="zoom:80%;" /><img src="https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/08.png?raw=true" alt="08" style="zoom:80%;" />
 
 动物纤维通常来自于动物身上的毛发或者是动物的分泌物。毛发纤维具有弹性好、保暖性好、吸湿性强、光泽柔和、抗静电等特点，多用于保暖服饰或四季皆宜的中高档服装。蚕丝是蚕的分泌物，是天然动物纤维中唯一的连续长纤维（几米甚至十几米，而上面的毛发相对短很多）。蚕丝制作的面料手感柔软，富有弹性，织物表面平滑均匀，光洁雅致，有冬暖夏凉的穿着感受，同时蚕丝具有很好的染色效果，经常被用来制作高档礼服。足丝是贝壳类动物分泌的一种纤维，过去在地中海地带又运用，现在比较罕见了。
 
@@ -54,7 +54,7 @@
   * 棉花
   * 木棉
 
-![09](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\09.png)
+![09](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/09.png?raw=true)
 
 * 茎
   * 亚麻
@@ -63,7 +63,7 @@
   * 苎麻
   * ……
 
-![10](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\10.png)
+![10](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/10.png?raw=true)
 
 * 叶子
   * 拉菲草
@@ -71,7 +71,7 @@
   * 剑麻
   * ……
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\11.png" alt="11" style="zoom:50%;" /><img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\12.png" alt="12" style="zoom:50%;" /><img src="C:\Users\52781\AppData\Roaming\Typora\typora-user-images\image-20220527003301176.png" alt="image-20220527003301176" style="zoom:50%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/11.png?raw=true" alt="11" style="zoom:50%;" /><img src="https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/12.png?raw=true" alt="12" style="zoom:50%;" /><img src="C:\Users\52781\AppData\Roaming\Typora\typora-user-images\image-20220527003301176.png" alt="image-20220527003301176" style="zoom:50%;" />
 
 * 果实
   * 椰子
@@ -88,7 +88,7 @@
 
 * 石棉
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\13.png" alt="13" style="zoom:67%;" /><img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\14.png" alt="14" style="zoom: 67%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/13.png?raw=true" alt="13" style="zoom:67%;" /><img src="https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/14.png?raw=true" alt="14" style="zoom: 67%;" />
 
 现在，石棉已经很少被用于服装制作中，因为其对人体有一定的危害性。现在常见的是用石棉制成的一些防火材料。
 
@@ -102,7 +102,7 @@
   * 牛奶蛋白
   * ……
 
-<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\15.png" alt="15" style="zoom:65%;" /><img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\16.png" alt="image-20220527011614081" style="zoom: 65%;" />
+<img src="https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/15.png?raw=true" alt="15" style="zoom:65%;" /><img src="https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/16.png?raw=true" alt="image-20220527011614081" style="zoom: 65%;" />
 
 * 植物原料（木材、草料、植物蛋白、海藻等）
   * 粘胶纤维
@@ -110,11 +110,11 @@
   * 醋酯纤维
   * ……
 
-![17](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\17.png)![18](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\18.png)![19](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\19.png)
+![17](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/17.png?raw=true)![18](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/18.png?raw=true)![19](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/19.png?raw=true)
 
 * 矿物原料（碳、金属、玻璃等）
 
-![20](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\20.png)<img src="E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\21.png" alt="21" style="zoom: 67%;" />
+![20](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/20.png?raw=true)<img src="https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/21.png?raw=true" alt="21" style="zoom: 67%;" />
 
 人造再生纤维是以自然界中的动植物或者矿物的高分子化合物或者其衍生物为原料制得的。动物原料中的牛奶蛋白制成的织物光泽和色泽都很优秀，且导湿性和透气性也比较好，有天然持久的抑菌功效。现代纺织业，也常常使用牛奶蛋白纤维来代替羊毛做一些针织面料。
 
@@ -128,27 +128,27 @@
 
 * 聚酰胺纤维（尼龙、锦纶）：锦纶最大的优点是结实耐磨，且重量较轻、弹性较好，其长纤维多用于针织和丝绸工业，短纤维大多与羊毛或毛型化纤混纺
 
-![22](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\22.png)
+![22](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/22.png?raw=true)
 
 * 聚酯纤维（涤纶）：在化学纤维中得到了最广泛的应用的纤维。涤纶强度高、耐冲击性好，且耐热、耐腐、耐蛀，缺点是吸湿性较差
 
-![23](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\23.png)
+![23](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/23.png?raw=true)
 
 * 聚氨酯纤维（氨纶）：氨纶又被称作弹性纤维，具有非常好的弹性，强度和吸湿性都比较差，有较好的耐光、耐酸、耐碱、耐磨性。用氨纶制成的面料穿着舒适，手感柔软且不容易起皱。由于上述这些特性，氨纶被广泛用于内衣、休闲服、短袜等衣物的制造中
 
-![24](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\24.png)
+![24](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/24.png?raw=true)
 
 * 聚丙烯腈纤维（腈纶）：腈纶纤维的性能与羊毛纤维类似，所以也被称为合成羊毛，同时其密度甚至比羊毛还小。用腈纶制成的面料保暖性较好
 
-![25](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\25.png)
+![25](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/25.png?raw=true)
 
 * 聚丙烯纤维（丙纶）：丙纶是常见化学纤维中最轻的纤维。它几乎不吸湿，但耐磨，弹性较好，化学稳定性好，一般被用来织袜或作为保暖填充材料
 
-![26](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\26.png)
+![26](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/26.png?raw=true)
 
 * 聚乙烯醇缩醛纤维（维纶）：维纶最大的特点就是吸湿性强，是合成纤维中最好的，与丙纶截然相反。但是，它的弹性比较差，织物容易起皱，且染色性较差，多和棉花混纺来制作细布、府绸、灯芯绒等面料
 
-![27](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\27.png)
+![27](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/27.png?raw=true)
 
 * ……
 
@@ -156,7 +156,9 @@
 
 ## 纱线的分类及特征
 
-纱线是纱和线的统称，两者有所区别。纱是由许多长度不等的短纤维通过捻接的方法制成，或由很长的连续单丝捻合而成。线是由两根或两根以上的单纱并合加捻制成的，也称为股线。
+纱线是纱和线的统称，两者有所区别。纱是由许多长度不等的短纤维通过捻接的方法制成，或由很长的连续单丝捻合而成。线是由两根或两根以上的单纱并合加捻制成的，也称为股线。股线中的每一根单纱，也称为一股。同时，股线还可以按一定方式进行合并加捻，从而得到复捻股线。
+
+![95](E:\My Documents\Github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\95.png)
 
 ### 纱线的基本分类
 
@@ -166,17 +168,15 @@
 
 纱线按原料纤维的长短可分为短纤纱和长丝纱。由一些长丝纤维所纺成的纱称为长丝纱，如天然蚕丝、化纤长丝、人造丝等。而主要由短纤维纺成的纱称为短纤纱，如棉纱、毛纱、麻纱等。注意原料纤维短不代表纺出的纱线长度短，二者没有关系。
 
-纱线按织造的用途还可以分为
+纱线按织造的用途还可以分为经纱、纬纱和针织纱。经纱是梭织中的纵向纱线，由于在织造时需要承受较大的张力和摩擦力，因此要求具有较高的强度和适当的捻度。相对的，纬纱是梭织中的横向纱线，由于织造时不需要像经纱一样承受较大的张力和摩擦力，因此强度要求比经纱低，但需要有一定的柔软性和捻度稳定性。针织纱则是用于针织的纱线，针织编结成圈以及钩针时要求纱线柔软光滑，因此针织纱通常质地均匀，捻度低于经纱和纬纱。
 
-纺纱方式决定了纱线最后的呈现形态。常见的花式纱线，有竹节纱、波纹纱、大肚纱、蜻蜓纱、圈圈纱、雪尼尔纱等，种类繁多。
+纺纱方式决定了纱线最后的呈现形态。除了上述的单纱、股线、复捻股线，还有花式纱线、包芯纱等种类。花式纱线使用两根以上不同粗细、不同原料、不同结构或不同色泽的纱线进行捻合，或利用特殊的方法进行捻合制成特殊的形状或结构。常见的花式纱线，有竹节纱、波纹纱、大肚纱、蜻蜓纱、圈圈纱、雪尼尔纱等，种类繁多。包芯纱由芯线和外包纱包缠而成。芯纱在中心，通常为强力和弹性较好的合成纤维长丝(涤纶、锦纶、氨纶等)，外包棉、毛等天然纤维。包覆纱与包芯纱类似，区别是包芯纱看不到芯纱，包覆纱能看到芯纱。
 
-![28](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\28.png)![29](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\29.png)
+![28](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/28.png?raw=true)![29](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/29.png?raw=true)
 
-![30](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\30.png)![31](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\31.png)
+![30](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/30.png?raw=true)![31](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/31.png?raw=true)
 
-![32](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\32.png)![33](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\33.png)
-
-
+![32](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/32.png?raw=true)![33](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/33.png?raw=true)
 
 
 
@@ -186,28 +186,28 @@
 
 * 梭织面料：梭织指的是将纱线经纬交错织成布料的方法，一般通过梭织机来完成
 
-![34](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\34.png)
+![34](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/34.png?raw=true)
 
 * 针织面料：指的是将纱线钩成线圈，经过相互的串套连接而形成的织物。手打毛线衣就是使用的针织的方法，当然在工业上还是由机器来操作
 
-![35](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\35.png)
+![35](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/35.png?raw=true)
 
 * 无纺布：在各种纤维原料上施以高压或者粘合产生的一种布状物，因为没有经过上述的编织过程，又被称为不织布
 
-![36](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\36.png)
+![36](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/36.png?raw=true)
 
-#### 梭织面料
+### 梭织面料
 
 * 经线：梭织过程中纵向排列的纱线
 * 纬线：梭织过程中横向排列的纱线
 
 梭织通过经线和纬线的相互交错形成织物面料。在下面的示意图中，将织物简化为晶格状，其中蓝色表示该部分纬线在经线之上，白色表示该部分经线在纬线之上。
 
-##### 平纹面料
+#### 平纹面料
 
-平纹面料经纱和纬纱每隔一根纱就交织一次而形成的面料。平纹面料交织点多，质地坚牢，表面平整，一般高档绣花面料都是采用平纹面料。平纹面料的正方两面的外观效果是相同的，较为轻薄，透气性也较好，一般来说价格较低（如白坯布）。
+平纹面料是指经纱和纬纱每隔一根纱就交织一次而形成的面料。平纹面料交织点多，质地坚牢，表面平整，一般高档绣花面料都是采用平纹面料。平纹面料的正反两面的外观效果是相同的，质地较为轻薄，透气性也较好，一般来说价格较低（如白坯布）。
 
-![37](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\37.png)
+![37](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/37.png?raw=true)
 
 * 府绸：用来制作衬衫等，比较轻薄
 
@@ -227,11 +227,11 @@
 
 
 
-##### 斜纹面料
+#### 斜纹面料
 
-斜纹面料的经纱和纬纱至少隔两根纱才交织一次，由于这样的编织方式经纱和纬纱的交织点在织物的表面会形成一定角度的斜纹线的结构形式，一般比较好辨认。斜纹面料有正反面之分，交织点相对于平纹面料来说较少，浮线较长，手感比较松软，最终产品也会显得比较厚实。
+斜纹面料的经纱和纬纱至少隔两根纱才交织一次，由于这样的编织方式会使经纱和纬纱的交织点在织物的表面形成一定角度的斜纹线的结构形式，一般比较好辨认。斜纹面料有正反面之分，交织点相对于平纹面料来说较少，浮线较长，手感比较松软，最终产品也会显得比较厚实。
 
-![38](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\38.png)
+![38](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/38.png?raw=true)
 
 * 牛仔布
 
@@ -243,13 +243,13 @@
 
 
 
-##### 缎纹面料
+#### 缎纹面料
 
 缎纹面料的经纱和纬纱至少隔三根纱才交织一次。缎纹面料的制造工艺比较复杂，它较长的浮线使织物的表面拥有较好的光泽，容易产生反光。例如，全棉贡缎的面料会有一种隐隐的光泽感。也因为其浮线较长，缎纹面料相对容易磨损、起毛，织物的强度相对较低，制作成本也比较高。
 
 
 
-![39](E:\Backup Folder\LiHaoyu\github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\39.png)
+![39](https://github.com/Orznijiang/MyImageBed/blob/main/Paper-Reading/Rendering/Fabric/Fabric%20Basis/39.png?raw=true)
 
 * 丝绒
 
@@ -273,11 +273,11 @@
 
 
 
-#### 针织面料
+### 针织面料
 
-##### 经编织物
+#### 经编织物
 
-由多根纱线同时沿布面的纵向顺序编织成圈。
+经编织物是指由多根纱线同时沿布面的纵向顺序编织成圈形成的织物。
 
 ![54](E:\My Documents\Github\MyImageBed\Paper-Reading\Rendering\Fabric\Fabric Basis\54.png)
 
@@ -287,7 +287,7 @@
 
 
 
-##### 纬编织物
+#### 纬编织物
 
 由一根或者多根纱线沿布面的横向顺序编织成圈。
 
@@ -307,7 +307,7 @@
 
 
 
-#### 无纺布
+### 无纺布
 
 毡这一类的布料，如毛毡，可用于制作帽子等。一些经过硬压操作的无纺布可用于制作购物袋。
 
@@ -315,7 +315,7 @@
 
 
 
-## 认识常见服装面料
+## 常见服装面料
 
 ### 帆布
 
@@ -543,3 +543,4 @@
 * [4] https://zhuanlan.zhihu.com/p/436970199
 * [5] https://www.bilibili.com/video/BV1V7411M7ia?spm_id_from=333.999.0.0
 * [6] https://zhuanlan.zhihu.com/p/438064709
+* [7] https://wenku.baidu.com/view/b9f21a0fa11614791711cc7931b765ce05087ab8.html
